--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write \"src/**/*.ts\"",
-    "build": "rimraf dist && npx tsc",
+    "build": "npx tsc",
     "start": "node --unhandled-rejections=strict dist/server.js",
     "dev": "nodemon src/server.ts"
   },
